--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>RestProject</groupId>
   <artifactId>RestProject</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.4</version>
   <packaging>war</packaging>
   <repositories>
         <repository>
