--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,17 @@
 #release configuration
-#Fri Nov 04 15:36:36 GMT 2016
+#Fri Nov 04 15:46:17 GMT 2016
+project.scm.RestProject\:RestProject.tag=HEAD
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.tag=1.1.7-tag
+project.scm.RestProject\:RestProject.developerConnection=scm\:git\:https\://github.com/pankajbagul09/RestProject
 pushChanges=true
 scm.url=scm\:git\:https\://github.com/pankajbagul09/RestProject
 preparationGoals=clean verify
-projectVersionPolicyId=default
 remoteTagging=true
+projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.RestProject\:RestProject=1.1.8-SNAPSHOT
+project.rel.RestProject\:RestProject=1.1.7
+project.scm.RestProject\:RestProject.connection=scm\:git\:https\://github.com/pankajbagul09/RestProject
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+completedPhase=end-release
