--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,18 @@
 		        </target>
 		        <skip>true</skip>
 		        </configuration>
-		      </plugin>			            
+		      </plugin>	
+		      -<plugins>
+
+
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.5.1</version>
+					<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					</configuration>
+				</plugin>		            
 				<plugin>
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
