--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
         <developerConnection>scm:git:https://github.com/pankajbagul09/RestProject</developerConnection>
-      <tag>HEAD</tag>
+      <tag>1.1.10-tag</tag>
   </scm>
       
     <build>
@@ -100,8 +100,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.5.1</version>
 					<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>${jaxrs.version}</source>
+					<target>${jaxrs.version}</target>
 					</configuration>
 				</plugin>		            
 				<plugin>
