--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>RestProject</groupId>
   <artifactId>RestProject</artifactId>
-  <version>1.1.17-SNAPSHOT</version>
+  <version>1.1.18-SNAPSHOT</version>
   <packaging>war</packaging>
   <repositories>
         <repository>
@@ -88,12 +88,7 @@
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
-		        <configuration>
-		        <source>2.5.5</source>
-		        <target>
-		          2.5.1
-		        </target>
-		        </configuration>
+		        <version>2.5.1</version>
 		      </plugin>			            
         </plugins>
     </build>
