--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
                 </configuration>
                 
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Fast*</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
