--- a/pom.xml
+++ b/pom.xml
@@ -96,8 +96,17 @@
                     </includes>
                 </configuration>
             </plugin>
-            
-			<plugin>
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Fast*</include>
+                    </includes>
+                </configuration>
+            </plugin>
+  			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
 		        <version>2.5.1</version>
