--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+ <modelVersion>4.0.0</modelVersion>
   <groupId>RestProject</groupId>
   <artifactId>RestProject</artifactId>
   <version>1.1.24-SNAPSHOT</version>
@@ -71,8 +71,15 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.0</version>
-            </dependency>
+          </dependency>
+	      <dependency>
+	        <groupId>org.apache.maven.surefire</groupId>
+	        <artifactId>surefire-junit47</artifactId>
+	        <version>2.19.1</version>
+	      </dependency>
+	       
     </dependencies>
+    
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
         <developerConnection>scm:git:https://github.com/pankajbagul09/RestProject</developerConnection>
@@ -95,21 +102,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Fast*</include>
-                    </includes>
-                </configuration>
-            </plugin>
-			 <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Fast*</include>
-                    </includes>
-                </configuration>
             </plugin>
   			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
@@ -117,6 +109,7 @@
 		        <version>2.5.1</version>
 		      </plugin>			            
         </plugins>
+        
     </build>
     <profiles>
     	<profile>
