--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 	        <artifactId>surefire-junit47</artifactId>
 	        <version>2.19.1</version>
 	      </dependency>
+		  <dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
+			<version>1.8</version>
+		</dependency>
+	      
 	       
     </dependencies>
     
