javadoc plugin and dependancy added

--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,12 @@
 			<artifactId>jersey-multipart</artifactId>
 			<version>1.8</version>
 		</dependency>
-	      
-	       
-    </dependencies>
+	  <dependency>
+		  	<groupId>maven-javadoc-plugin</groupId>
+		  	<artifactId>maven-javadoc-plugin</artifactId>
+		  	<version>2.10.4</version>
+		  </dependency>
+     </dependencies>
     
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
@@ -109,6 +112,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
             </plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+            </plugin>            
   			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
