--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 			<version>1.8</version>
 		</dependency>
 	  <dependency>
-		  	<groupId>maven-javadoc-plugin</groupId>
+		  	<groupId>org.apache.maven.plugins</groupId>
 		  	<artifactId>maven-javadoc-plugin</artifactId>
 		  	<version>2.10.4</version>
 		  </dependency>
