--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
+                <configuration>
+                <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+                
             </plugin>            
   			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
