--- a/pom.xml
+++ b/pom.xml
@@ -82,18 +82,13 @@
 			<artifactId>jersey-multipart</artifactId>
 			<version>1.8</version>
 		</dependency>
-	  <dependency>
-		  	<groupId>org.apache.maven.plugins</groupId>
-		  	<artifactId>maven-javadoc-plugin</artifactId>
-		  	<version>2.10.4</version>
-		  </dependency>
-     </dependencies>
+	 
     
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
         <developerConnection>scm:git:https://github.com/pankajbagul09/RestProject</developerConnection>
       <tag>RestProject-1.1.19</tag>
-  </scm>
+  </scm>ja
       
     <build>
         <finalName>RestProject</finalName>
@@ -113,15 +108,6 @@
                 <version>2.19.1</version>
             </plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <configuration>
-                <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-                
-            </plugin>            
-  			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
 		        <version>2.5.1</version>
