--- a/pom.xml
+++ b/pom.xml
@@ -82,13 +82,13 @@
 			<artifactId>jersey-multipart</artifactId>
 			<version>1.8</version>
 		</dependency>
-	 
+	 </dependencies>
     
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
         <developerConnection>scm:git:https://github.com/pankajbagul09/RestProject</developerConnection>
       <tag>RestProject-1.1.19</tag>
-  </scm>ja
+  	</scm>
       
     <build>
         <finalName>RestProject</finalName>
