--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target> 
+                    <source>1.8</source>
+                    <target>1.8</target> 
                 </configuration>
                 
             </plugin>
@@ -111,7 +111,14 @@
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
 		        <version>2.5.1</version>
-		      </plugin>			            
+		      </plugin>			
+		      <plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+				<warSourceDirectory>WebContent</warSourceDirectory>
+				</configuration>
+			</plugin>            
         </plugins>
         
         
