--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
  <modelVersion>4.0.0</modelVersion>
   <groupId>RestProject</groupId>
   <artifactId>RestProject</artifactId>
-  <version>1.1.32</version>
+  <version>1.1.33-SNAPSHOT</version>
   <packaging>war</packaging>
   <repositories>
         <repository>
@@ -87,7 +87,7 @@
 	 <scm>
         <connection>scm:git:https://github.com/pankajbagul09/RestProject</connection>
         <developerConnection>scm:git:https://github.com/pankajbagul09/RestProject</developerConnection>
-      <tag>RestProject-1.1.32</tag>
+      <tag>RestProject-1.1.19</tag>
   	</scm>
       
     <build>
